--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,14 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/hamster_logo"
+        android:icon="@drawable/logoeye"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/hamster_logo"
+        android:roundIcon="@drawable/logoeye"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExpertSystem"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity2"
+            android:name=".test.MainduluActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
